# video_game_inventory_demo_imgui

./: .gitignore  CMakeLists.txt  main.cpp
src/: Character.cpp  Character.h  Item.cpp  Item.h
